--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -44,8 +44,21 @@
 
 This section derives the model of endogenous growth where there is no labour. 
 
-\subsection{Model Results}
+\subsection{Equilibrium Conditions}
 
+We have 4 equilibrium conditions
+
+\begin{align}
+    \frac{1+g_{t+1}}{c_t} =& \frac{1}{c_{t+1}} \beta (r_{t+1}(1 - \tau_k) + 1 - \delta) \label{eq:euler} \\
+    y_t =& c_t + k_{t+1} - k_t(1 - \delta) \label{eq:goods_mkt} \\
+    r_t =& (\frac{k_t}{A_t})^{\alpha - 1}\alpha^2 \label{eq:capital_mkt} \\
+    y_t =& A^{1 - \alpha}k_t^\alpha \label{eq:prod_func} \\
+    g_t =& (\gamma - 1)\lambda(\sigma \lambda (\alpha - 1) \left(\frac{k_t}{A_t}\right)^\alpha)^{\frac{\sigma}{1 - \sigma}} \label{eq:growth_rate}
+\end{align}
+
+\ref{eq:euler} is the household euler equation, \ref{eq:goods_mkt} is the goods market clearing equation, \ref{eq:capital_mkt} is the capital market clearing equation, \ref{eq:prod_func} is the aggregate production function and \ref{eq:growth_rate} is the equilibrium growth rate. Since \ref{eq:growth_rate} is determined directly by capital stock $k_t$ we would expect that a reduction in $\tau_k$ will increase capital stock in the economy and hence increase the growth rate.
+
+\subsection{Model Results} 
 In this model, a tax cut on capital unambiguously increases growth rate/innovation rate. The equation which determines this is
 "no arbitrage" condition on innovation expenditure which has the capital tax rate directly featured in it.
 
